@@ -25,6 +25,7 @@ Version 1.4.3 - CVS
     Stable 1.4 tracker 699920
   - New hook function: boolean_hook_function()  Used for true/false hooks.
   - Fixed 870365.
+  - Added new reply citation to include date and author.
 
 
 Version 1.4.2 - 1 October 2003
